minor reorg of storefront admin; working on building out the prototype screens

--- a/apps/StorefrontAdminComposite/StorefrontAdminComposite.csproj
+++ b/apps/StorefrontAdminComposite/StorefrontAdminComposite.csproj
@@ -148,21 +148,20 @@
     <Content Include="Content\css\app.css" />
     <Content Include="Content\img\glyphicons-halflings-white.png" />
     <Content Include="Content\img\glyphicons-halflings.png" />
-    <Content Include="Content\js\euclid.admin.js" />
-    <Content Include="Content\js\lib\backbone-min.js" />
-    <Content Include="Content\js\lib\bootstrap-alert.js" />
-    <Content Include="Content\js\lib\bootstrap-button.js" />
-    <Content Include="Content\js\lib\bootstrap-carousel.js" />
-    <Content Include="Content\js\lib\bootstrap-collapse.js" />
-    <Content Include="Content\js\lib\bootstrap-dropdown.js" />
-    <Content Include="Content\js\lib\bootstrap-modal.js" />
-    <Content Include="Content\js\lib\bootstrap-popover.js" />
-    <Content Include="Content\js\lib\bootstrap-scrollspy.js" />
-    <Content Include="Content\js\lib\bootstrap-tab.js" />
-    <Content Include="Content\js\lib\bootstrap-tooltip.js" />
-    <Content Include="Content\js\lib\bootstrap-transition.js" />
-    <Content Include="Content\js\lib\bootstrap-typeahead.js" />
-    <Content Include="Content\js\lib\handlebars-1.0.0.beta.6.js" />
+    <Content Include="Content\js\backbone-min.js" />
+    <Content Include="Content\js\bootstrap-alert.js" />
+    <Content Include="Content\js\bootstrap-button.js" />
+    <Content Include="Content\js\bootstrap-carousel.js" />
+    <Content Include="Content\js\bootstrap-collapse.js" />
+    <Content Include="Content\js\bootstrap-dropdown.js" />
+    <Content Include="Content\js\bootstrap-modal.js" />
+    <Content Include="Content\js\bootstrap-popover.js" />
+    <Content Include="Content\js\bootstrap-scrollspy.js" />
+    <Content Include="Content\js\bootstrap-tab.js" />
+    <Content Include="Content\js\bootstrap-tooltip.js" />
+    <Content Include="Content\js\bootstrap-transition.js" />
+    <Content Include="Content\js\bootstrap-typeahead.js" />
+    <Content Include="Content\js\handlebars-1.0.0.beta.6.js" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ShellController.cs" />
     <Compile Include="CommonStorefrontAdminInfo.cs" />
@@ -174,81 +173,81 @@
     <Compile Include="WebRole.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\js\app.js" />
+    <Content Include="Content\app\app.js" />
     <None Include="Content\app\templates\company\Employees.handlebars" />
     <None Include="Content\app\templates\company\Financials.handlebars" />
-    <Content Include="Content\js\lib\min\plugins\sammy.cache-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.cache-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.data_location_proxy-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.data_location_proxy-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.ejs-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.ejs-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.exceptional-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.exceptional-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.flash-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.flash-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.form-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.form-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.form_2_json-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.form_2_json-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.googleanalytics-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.googleanalytics-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.haml-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.haml-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.handlebars-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.handlebars-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.hoptoad-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.hoptoad-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.json-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.json-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.meld-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.meld-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.mustache-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.mustache-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.nested_params-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.nested_params-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.oauth2-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.oauth2-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.path_location_proxy-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.path_location_proxy-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.pure-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.pure-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.push_location_proxy-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.push_location_proxy-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.storage-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.storage-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.template-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.template-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.title-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.title-latest.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.tmpl-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\plugins\sammy.tmpl-latest.min.js" />
-    <Content Include="Content\js\lib\min\sammy-0.7.1.min.js" />
-    <Content Include="Content\js\lib\min\sammy-latest.min.js" />
-    <Content Include="Content\js\lib\plugins\sammy.cache.js" />
-    <Content Include="Content\js\lib\plugins\sammy.data_location_proxy.js" />
-    <Content Include="Content\js\lib\plugins\sammy.ejs.js" />
-    <Content Include="Content\js\lib\plugins\sammy.exceptional.js" />
-    <Content Include="Content\js\lib\plugins\sammy.flash.js" />
-    <Content Include="Content\js\lib\plugins\sammy.form.js" />
-    <Content Include="Content\js\lib\plugins\sammy.form_2_json.js" />
-    <Content Include="Content\js\lib\plugins\sammy.googleanalytics.js" />
-    <Content Include="Content\js\lib\plugins\sammy.haml.js" />
-    <Content Include="Content\js\lib\plugins\sammy.handlebars.js" />
-    <Content Include="Content\js\lib\plugins\sammy.hoptoad.js" />
-    <Content Include="Content\js\lib\plugins\sammy.json.js" />
-    <Content Include="Content\js\lib\plugins\sammy.meld.js" />
-    <Content Include="Content\js\lib\plugins\sammy.mustache.js" />
-    <Content Include="Content\js\lib\plugins\sammy.nested_params.js" />
-    <Content Include="Content\js\lib\plugins\sammy.oauth2.js" />
-    <Content Include="Content\js\lib\plugins\sammy.path_location_proxy.js" />
-    <Content Include="Content\js\lib\plugins\sammy.pure.js" />
-    <Content Include="Content\js\lib\plugins\sammy.push_location_proxy.js" />
-    <Content Include="Content\js\lib\plugins\sammy.storage.js" />
-    <Content Include="Content\js\lib\plugins\sammy.template.js" />
-    <Content Include="Content\js\lib\plugins\sammy.title.js" />
-    <Content Include="Content\js\lib\plugins\sammy.tmpl.js" />
-    <Content Include="Content\js\lib\sammy.js" />
+    <Content Include="Content\js\min\plugins\sammy.cache-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.cache-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.data_location_proxy-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.data_location_proxy-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.ejs-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.ejs-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.exceptional-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.exceptional-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.flash-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.flash-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.form-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.form-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.form_2_json-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.form_2_json-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.googleanalytics-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.googleanalytics-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.haml-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.haml-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.handlebars-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.handlebars-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.hoptoad-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.hoptoad-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.json-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.json-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.meld-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.meld-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.mustache-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.mustache-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.nested_params-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.nested_params-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.oauth2-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.oauth2-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.path_location_proxy-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.path_location_proxy-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.pure-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.pure-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.push_location_proxy-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.push_location_proxy-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.storage-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.storage-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.template-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.template-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.title-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.title-latest.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.tmpl-0.7.1.min.js" />
+    <Content Include="Content\js\min\plugins\sammy.tmpl-latest.min.js" />
+    <Content Include="Content\js\min\sammy-0.7.1.min.js" />
+    <Content Include="Content\js\min\sammy-latest.min.js" />
+    <Content Include="Content\js\plugins\sammy.cache.js" />
+    <Content Include="Content\js\plugins\sammy.data_location_proxy.js" />
+    <Content Include="Content\js\plugins\sammy.ejs.js" />
+    <Content Include="Content\js\plugins\sammy.exceptional.js" />
+    <Content Include="Content\js\plugins\sammy.flash.js" />
+    <Content Include="Content\js\plugins\sammy.form.js" />
+    <Content Include="Content\js\plugins\sammy.form_2_json.js" />
+    <Content Include="Content\js\plugins\sammy.googleanalytics.js" />
+    <Content Include="Content\js\plugins\sammy.haml.js" />
+    <Content Include="Content\js\plugins\sammy.handlebars.js" />
+    <Content Include="Content\js\plugins\sammy.hoptoad.js" />
+    <Content Include="Content\js\plugins\sammy.json.js" />
+    <Content Include="Content\js\plugins\sammy.meld.js" />
+    <Content Include="Content\js\plugins\sammy.mustache.js" />
+    <Content Include="Content\js\plugins\sammy.nested_params.js" />
+    <Content Include="Content\js\plugins\sammy.oauth2.js" />
+    <Content Include="Content\js\plugins\sammy.path_location_proxy.js" />
+    <Content Include="Content\js\plugins\sammy.pure.js" />
+    <Content Include="Content\js\plugins\sammy.push_location_proxy.js" />
+    <Content Include="Content\js\plugins\sammy.storage.js" />
+    <Content Include="Content\js\plugins\sammy.template.js" />
+    <Content Include="Content\js\plugins\sammy.title.js" />
+    <Content Include="Content\js\plugins\sammy.tmpl.js" />
+    <Content Include="Content\js\sammy.js" />
     <Content Include="Global.asax" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
