--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -114,6 +114,7 @@
     <EmbeddedResource Include="Views\Templates\euclid-error-modal.cshtml" />
     <EmbeddedResource Include="Views\Templates\polling-modal.cshtml" />
     <EmbeddedResource Include="Views\Templates\composite-link.cshtml" />
+    <EmbeddedResource Include="Views\Templates\euclid-error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\common\Euclid.Common.Storage\Euclid.Common.Storage.csproj">
