--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -70,33 +70,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\LogModel.cs" />
+    <Compile Include="FileUploader.cs" />
+    <Compile Include="FormatExtensions.cs" />
+    <Compile Include="FormattedException.cs" />
     <Compile Include="Module\ApiModule.cs" />
     <Compile Include="Module\AssetModule.cs" />
-    <Compile Include="Module\CommandNotFoundInRegistryException.cs" />
+    <Compile Include="CommandNotFoundInRegistryException.cs" />
+    <Compile Include="CommandNotPresentInAgentException.cs" />
     <Compile Include="Module\LogModule.cs" />
     <Compile Include="CompositeInspectorBootstrapper.cs" />
-    <Compile Include="Models\AgentModel.cs" />
-    <Compile Include="Models\AgentPartModel.cs" />
-    <Compile Include="Models\CommandModel.cs" />
-    <Compile Include="Models\CompositeHome.cs" />
-    <Compile Include="Models\PublishedCommandModel.cs" />
     <Compile Include="Module\CommandModule.cs" />
+    <Compile Include="ReadModelNotFoundException.cs" />
     <Compile Include="Module\UserInterfaceModule.cs" />
     <Compile Include="Module\QueryModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Binders\InputModelBinder.cs" />
+    <Compile Include="ResponseFormat.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
-    <EmbeddedResource Include="Views\Composite\command-orig.cshtml" />
-    <EmbeddedResource Include="Views\Composite\home.cshtml" />
-    <EmbeddedResource Include="Views\Composite\view-agent.cshtml" />
     <EmbeddedResource Include="Views\Shared\Frameset.cshtml" />
     <EmbeddedResource Include="Views\Shared\_Layout.cshtml" />
-    <EmbeddedResource Include="Views\Commands\view-publication-record.cshtml" />
-    <EmbeddedResource Include="Views\Log\logs.cshtml" />
     <EmbeddedResource Include="Views\view-agent.cshtml" />
     <EmbeddedResource Include="Views\Queries\view-query-metadata.cshtml" />
     <EmbeddedResource Include="Views\Templates\read-model.cshtml" />
