--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -20,7 +20,6 @@
   <repository path="..\src\sdk\Euclid.Composites.Mvc\packages.config" />
   <repository path="..\src\sdk\Euclid.Composites\packages.config" />
   <repository path="..\src\sdk\Euclid.TestingSupport\packages.config" />
-  <repository path="..\src\sdk\JsonCompositeInspector\packages.config" />
   <repository path="..\src\sdk\LoggingAgent\packages.config" />
   <repository path="..\tests\Euclid.Common.IntegrationTests\packages.config" />
   <repository path="..\tests\Euclid.Common.UnitTests\packages.config" />
@@ -34,5 +33,6 @@
   <repository path="..\tests\Euclid.Sdk.Specifications\packages.config" />
   <repository path="..\tests\Euclid.Sdk.TestAgent\packages.config" />
   <repository path="..\tests\Euclid.Sdk.TestComposite\packages.config" />
-  <repository path="..\src\sdk\AzureAgentConsole\packages.config" />
+  <repository path="..\apps\StorefrontAgent\packages.config" />
+  <repository path="..\apps\StorefrontAdminComposite\packages.config" />
 </repositories>
