--- a/tests/Euclid.Sdk.IntegrationTests/Euclid.Sdk.IntegrationTests.csproj
+++ b/tests/Euclid.Sdk.IntegrationTests/Euclid.Sdk.IntegrationTests.csproj
@@ -103,6 +103,9 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Config\bluejay.custom.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Config\custom.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
