support for multiple agents in the fabric

--- a/apps/StorefrontAdminComposite/Config/bluejay.custom.config
+++ b/apps/StorefrontAdminComposite/Config/bluejay.custom.config
@@ -4,7 +4,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <connectionStrings>
-    <add name="storefront-db" connectionString="Data Source=.;Initial Catalog=storefront-db;Integrated Security=SSPI;Persist Security Info=False;" />
+    <add name="storefront-db" connectionString="Data Source=.;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
   </connectionStrings>
 	<appSettings>
 	</appSettings>
