--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -15,6 +15,7 @@
   <repository path="..\src\framework\Euclid.Framework.EventSourcing\packages.config" />
   <repository path="..\src\framework\Euclid.Framework.HostingFabric\packages.config" />
   <repository path="..\src\sdk\AgentConsole\packages.config" />
+  <repository path="..\src\sdk\AzureAgentConsole\packages.config" />
   <repository path="..\src\sdk\CompositeInspector\packages.config" />
   <repository path="..\src\sdk\Euclid.Agent\packages.config" />
   <repository path="..\src\sdk\Euclid.Composites.Mvc\packages.config" />
@@ -34,5 +35,5 @@
   <repository path="..\tests\Euclid.Sdk.Specifications\packages.config" />
   <repository path="..\tests\Euclid.Sdk.TestAgent\packages.config" />
   <repository path="..\tests\Euclid.Sdk.TestComposite\packages.config" />
-  <repository path="..\src\sdk\AzureAgentConsole\packages.config" />
+  <repository path="..\tests\Euclid.Sdk.UnitTests\packages.config" />
 </repositories>
