--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -70,8 +70,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\ExceptionExtensions.cs" />
     <Compile Include="FileUploader.cs" />
-    <Compile Include="FormatExtensions.cs" />
+    <Compile Include="Extensions\FormatExtensions.cs" />
     <Compile Include="FormattedException.cs" />
     <Compile Include="Module\ApiModule.cs" />
     <Compile Include="Module\AssetModule.cs" />
