--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -108,6 +108,7 @@
     <EmbeddedResource Include="Views\templates\composite-link.cshtml" />
     <EmbeddedResource Include="Views\templates\euclid-error.cshtml" />
     <EmbeddedResource Include="Views\templates\modal\command.cshtml" />
+    <EmbeddedResource Include="Views\templates\modal\query.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\common\Euclid.Common.Storage\Euclid.Common.Storage.csproj">
