--- a/apps/StorefrontAdminComposite/StorefrontAdminComposite.csproj
+++ b/apps/StorefrontAdminComposite/StorefrontAdminComposite.csproj
@@ -145,6 +145,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\app\events.js" />
+    <Content Include="Content\css\bootstrap-responsive.css" />
+    <Content Include="Content\css\bootstrap-responsive.min.css" />
     <Content Include="Content\css\bootstrap.css" />
     <Content Include="Content\css\app.css" />
     <Content Include="Content\css\bootstrap.min.css" />
@@ -165,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\app\app.js" />
+    <None Include="Content\app\templates\company\AddEmployee.handlebars" />
     <None Include="Content\app\templates\company\Employees.handlebars" />
     <None Include="Content\app\templates\company\Financials.handlebars" />
     <Content Include="Content\js\min\plugins\sammy.cache-0.7.1.min.js" />
@@ -254,6 +257,10 @@
     <None Include="Content\app\templates\company\AllTransactions.handlebars" />
     <None Include="Content\app\templates\partials\inputModel\StringProperty.handlebars" />
     <None Include="Content\app\templates\store\AddOrder.handlebars" />
+    <None Include="Content\app\templates\store\AddProduct.handlebars" />
+    <None Include="Content\app\templates\store\AddPromotion.handlebars" />
+    <None Include="Content\app\templates\store\AddDiscountCode.handlebars" />
+    <None Include="Content\app\templates\store\InviteCustomer.handlebars" />
     <None Include="Content\app\templates\store\DiscountCodes.handlebars" />
     <None Include="Content\app\templates\store\Promotions.handlebars" />
     <None Include="Content\app\templates\store\ProductCatalog.handlebars">
@@ -263,8 +270,6 @@
     <None Include="Content\app\templates\store\Orders.handlebars" />
     <None Include="Content\app\templates\store\Financials.handlebars" />
     <Content Include="Views\Shared\LeftNav.cshtml" />
-    <None Include="Content\css\bootstrap.min.responsive" />
-    <None Include="Content\css\bootstrap.responsive" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
