--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -57,12 +57,12 @@
 			</namespaces>
 		</pages>
 		<trace writeToDiagnosticsTrace="true" enabled="false" pageOutput="false" />
-		<httpModules>
+		<!--<httpModules>
 			<add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
 		</httpModules>
 		<httpHandlers>
 			<add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
-		</httpHandlers>
+		</httpHandlers>-->
 	</system.web>
 	<system.webServer>
 		<modules runAllManagedModulesForAllRequests="false">
