--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -39,9 +39,9 @@
 			</assemblies>
 		</compilation>
 		<authentication mode="Forms">
-			<forms 
+			<forms
 				name="AdminCompositeAuth"
-				loginUrl="~/Authentication/Signin" 
+				loginUrl="~/Authentication/Signin"
 				timeout="2880" />
 		</authentication>
 		<httpRuntime requestValidationMode="2.0" />
@@ -68,10 +68,14 @@
 		<modules runAllManagedModulesForAllRequests="false">
 			<add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
 		</modules>
-		<handlers>
-			<add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
-		</handlers>
 	</system.webServer>
+	<location path="composite">
+		<system.webServer>
+			<handlers>
+				<add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
+			</handlers>
+		</system.webServer>
+	</location>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
