--- a/apps/ForumComposite/Web.config
+++ b/apps/ForumComposite/Web.config
@@ -60,10 +60,14 @@
 		<modules runAllManagedModulesForAllRequests="true">
 			<add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
 		</modules>
-		<handlers>
-			<add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
-		</handlers>
 	</system.webServer>
+	<location path="composite">
+		<system.webServer>
+				<handlers>
+				<add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
+			</handlers>
+		</system.webServer>
+	</location>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
