--- a/apps/StorefrontAdminComposite/StorefrontAdminComposite.csproj
+++ b/apps/StorefrontAdminComposite/StorefrontAdminComposite.csproj
@@ -14,7 +14,7 @@
     <AssemblyName>StorefrontAdminComposite</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -175,9 +176,6 @@
       <Private>True</Private>
       <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Web.Mvc, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.Web.Mvc.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.WindowsAzure.Diagnostics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.Diagnostics.dll</HintPath>
     </Reference>
@@ -188,8 +186,8 @@
     <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.StorageClient.dll</HintPath>
     </Reference>
-    <Reference Include="MvcContrib, Version=3.0.68.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\MvcContrib.dll</HintPath>
+    <Reference Include="msshrtmi, Version=1.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
+      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\msshrtmi.dll</HintPath>
     </Reference>
     <Reference Include="Nancy, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.dll</HintPath>
@@ -453,11 +451,11 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>28853</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/StorefrontAdminComposite</IISUrl>
+          <IISUrl>http://localhost:28853/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
