--- a/apps/packages/repositories.config
+++ b/apps/packages/repositories.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\storefront\StorefrontAdmin\packages.config" />
-  <repository path="..\StorefrontAdminComposite\packages.config" />
-  <repository path="..\StorefrontAgent\packages.config" />
+  <repository path="..\Storefront\StorefrontAdminComposite\packages.config" />
+  <repository path="..\Storefront\StorefrontAgent\packages.config" />
 </repositories>
