--- a/apps/Storefront/StorefrontAdminComposite/StorefrontAdminComposite.csproj
+++ b/apps/Storefront/StorefrontAdminComposite/StorefrontAdminComposite.csproj
@@ -67,143 +67,171 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoMapper, Version=2.0.0.232, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\AutoMapper.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="AzureAgentConsole, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\AzureAgentConsole.dll</HintPath>
+    </Reference>
+    <Reference Include="AzureAgentHost, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\AzureAgentHost.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Core, Version=2.5.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Castle.Core.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Windsor, Version=2.5.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Castle.Windsor.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Castle.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="CommonServiceLocator.WindsorAdapter, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\CommonServiceLocator.WindsorAdapter.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\CommonServiceLocator.WindsorAdapter.dll</HintPath>
     </Reference>
     <Reference Include="CompositeInspector, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\CompositeInspector.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\CompositeInspector.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Common.Configuration, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.Configuration.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.Configuration.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Common.Messaging, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.Messaging.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.Messaging.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Common.Messaging.Azure, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.Messaging.Azure.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.Messaging.Azure.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Common.ServiceHost, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.ServiceHost.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.ServiceHost.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Common.Storage, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.Storage.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.Storage.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Common.Storage.Azure, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.Storage.Azure.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.Storage.Azure.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Common.Storage.NHibernate, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.Storage.NHibernate.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Common.Storage.NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Composites, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Composites.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Composites.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Composites.Mvc, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Composites.Mvc.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Composites.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Framework, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Framework.Agent, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.Agent.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.Agent.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Framework.AgentMetadata, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.AgentMetadata.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.AgentMetadata.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Framework.Cqrs, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.Cqrs.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.Cqrs.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Framework.Cqrs.NHibernate, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.Cqrs.NHibernate.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.Cqrs.NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Framework.EventSourcing, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.EventSourcing.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.EventSourcing.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Framework.HostingFabric, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.HostingFabric.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.HostingFabric.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Framework.Models, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.Models.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.Models.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.Sdk.TestAgent, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Sdk.TestAgent.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Sdk.TestAgent.dll</HintPath>
     </Reference>
     <Reference Include="Euclid.TestingSupport, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.TestingSupport.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.TestingSupport.dll</HintPath>
+    </Reference>
+    <Reference Include="EventStore, Version=2.0.11157.39, Culture=neutral, PublicKeyToken=7735eb81c0bd9948, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\EventStore.dll</HintPath>
     </Reference>
     <Reference Include="FluentNHibernate, Version=1.3.0.717, Culture=neutral, PublicKeyToken=8aa435e3cb308880, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\FluentNHibernate.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\FluentNHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="ForumAgent, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\ForumAgent.dll</HintPath>
     </Reference>
     <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Iesi.Collections.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Iesi.Collections.dll</HintPath>
     </Reference>
     <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\log4net.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\log4net.dll</HintPath>
     </Reference>
     <Reference Include="LoggingAgent, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\LoggingAgent.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\LoggingAgent.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Web.Administration, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.Web.Administration.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.Web.Administration.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.Web.Infrastructure.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Diagnostics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.Diagnostics.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.Diagnostics.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.ServiceRuntime.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.ServiceRuntime.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.StorageClient.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.StorageClient.dll</HintPath>
+    </Reference>
+    <Reference Include="msshrtmi, Version=1.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
+      <Private>True</Private>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\msshrtmi.dll</HintPath>
     </Reference>
     <Reference Include="Nancy, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.dll</HintPath>
     </Reference>
     <Reference Include="Nancy.BootStrappers.Windsor, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.BootStrappers.Windsor.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.BootStrappers.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="Nancy.Hosting.Aspnet, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.Hosting.Aspnet.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.Hosting.Aspnet.dll</HintPath>
     </Reference>
     <Reference Include="Nancy.ViewEngines.Razor, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.ViewEngines.Razor.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.ViewEngines.Razor.dll</HintPath>
     </Reference>
     <Reference Include="NConfig, Version=1.0.12.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\NConfig.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\NConfig.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.0.2.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate, Version=3.2.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\NHibernate.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\NHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.mocks, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\nunit.mocks.dll</HintPath>
+    </Reference>
+    <Reference Include="pnunit.framework, Version=1.0.4109.34242, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\pnunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="RouteDebugger, Version=2.0.0.7, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\RouteDebugger.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\System.Data.SQLite.DLL</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\System.Data.SQLite.DLL</HintPath>
     </Reference>
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Web.Razor, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\System.Web.Razor.dll</HintPath>
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\System.Web.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -215,6 +243,9 @@
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
+    <Reference Include="TechTalk.SpecFlow, Version=1.7.0.0, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\TechTalk.SpecFlow.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\app\events.js" />
