updated euclid packages. the storefront admin now works based on them.

--- a/apps/Storefront/StorefrontAdminComposite/Web.config
+++ b/apps/Storefront/StorefrontAdminComposite/Web.config
@@ -61,9 +61,9 @@
 		</httpModules>-->
 	</system.web>
 	<system.webServer>
-		<!-- What problems will this cause? <modules runAllManagedModulesForAllRequests="false">
+		<modules runAllManagedModulesForAllRequests="false">
 			<add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
-		</modules>-->
+		</modules>
 	</system.webServer>
 	<location path="composite">
 		<system.webServer>
