--- a/apps/Storefront/StorefrontAdminComposite/StorefrontAdminComposite.csproj
+++ b/apps/Storefront/StorefrontAdminComposite/StorefrontAdminComposite.csproj
@@ -66,12 +66,6 @@
     <Reference Include="AutoMapper, Version=2.0.0.232, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\AutoMapper.dll</HintPath>
     </Reference>
-    <Reference Include="AzureAgentConsole, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\AzureAgentConsole.dll</HintPath>
-    </Reference>
-    <Reference Include="AzureAgentHost, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\AzureAgentHost.dll</HintPath>
-    </Reference>
     <Reference Include="Castle.Core, Version=2.5.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Castle.Core.dll</HintPath>
     </Reference>
@@ -138,20 +132,11 @@
     <Reference Include="Euclid.Framework.Models, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Framework.Models.dll</HintPath>
     </Reference>
-    <Reference Include="Euclid.Sdk.TestAgent, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.Sdk.TestAgent.dll</HintPath>
-    </Reference>
-    <Reference Include="Euclid.TestingSupport, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Euclid.TestingSupport.dll</HintPath>
-    </Reference>
     <Reference Include="EventStore, Version=2.0.11157.39, Culture=neutral, PublicKeyToken=7735eb81c0bd9948, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\EventStore.dll</HintPath>
     </Reference>
     <Reference Include="FluentNHibernate, Version=1.3.0.717, Culture=neutral, PublicKeyToken=8aa435e3cb308880, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\FluentNHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="ForumAgent, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\ForumAgent.dll</HintPath>
     </Reference>
     <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Iesi.Collections.dll</HintPath>
@@ -159,7 +144,7 @@
     <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="LoggingAgent, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="LoggingAgent">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\LoggingAgent.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -173,9 +158,6 @@
       <Private>True</Private>
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.WindowsAzure.Diagnostics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.Diagnostics.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.ServiceRuntime.dll</HintPath>
@@ -183,19 +165,19 @@
     <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.StorageClient.dll</HintPath>
     </Reference>
-    <Reference Include="Nancy, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Nancy">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.dll</HintPath>
     </Reference>
-    <Reference Include="Nancy.BootStrappers.Windsor, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Nancy.BootStrappers.Windsor">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.BootStrappers.Windsor.dll</HintPath>
     </Reference>
-    <Reference Include="Nancy.Hosting.Aspnet, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Nancy.Hosting.Aspnet">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.Hosting.Aspnet.dll</HintPath>
     </Reference>
-    <Reference Include="Nancy.ViewEngines.Razor, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Nancy.ViewEngines.Razor">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\Nancy.ViewEngines.Razor.dll</HintPath>
     </Reference>
-    <Reference Include="NConfig, Version=1.0.12.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="NConfig">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\NConfig.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.0.2.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -204,20 +186,8 @@
     <Reference Include="NHibernate, Version=3.2.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\NHibernate.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.mocks, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\nunit.mocks.dll</HintPath>
-    </Reference>
-    <Reference Include="pnunit.framework, Version=1.0.4109.34242, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\pnunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="RouteDebugger, Version=2.0.0.7, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\RouteDebugger.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
-      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\System.Data.SQLite.DLL</HintPath>
     </Reference>
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -236,9 +206,6 @@
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
-    <Reference Include="TechTalk.SpecFlow, Version=1.7.0.0, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Euclid-Composite-Inspector.1.0.0.0\lib\NET40\TechTalk.SpecFlow.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\app\events.js" />
@@ -444,7 +411,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>28853</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
