--- a/src/sdk/Euclid.Composites.Mvc/packages.config
+++ b/src/sdk/Euclid.Composites.Mvc/packages.config
@@ -6,6 +6,7 @@
   <package id="CommonServiceLocator" version="1.0" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
   <package id="log4net" version="1.2.10" />
+  <package id="NConfig" version="1.0.12" />
   <package id="Newtonsoft.Json" version="4.0.2" />
   <package id="routedebugger" version="2.0.0.7" />
 </packages>
