renamed the nuget packages

--- a/apps/Forum/ForumConsole/ForumConsole.csproj
+++ b/apps/Forum/ForumConsole/ForumConsole.csproj
@@ -122,8 +122,15 @@
     <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-AgentSDK.1.0.0.0\lib\NET40\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="LoggingAgent, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Euclid-AgentSDK.1.0.0.0\lib\NET40\LoggingAgent.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-AgentSDK.1.0.0.0\lib\NET40\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\..\packages\Euclid-AgentSDK.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.ServiceRuntime.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Euclid-AgentSDK.1.0.0.0\lib\NET40\Microsoft.WindowsAzure.StorageClient.dll</HintPath>
