getting closer to running on azure, i hope.

--- a/apps/Forum/AdminComposite/Web.config
+++ b/apps/Forum/AdminComposite/Web.config
@@ -65,7 +65,7 @@
 		</httpHandlers>-->
 	</system.web>
 	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="false">
+		<modules runAllManagedModulesForAllRequests="true">
 			<add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
 		</modules>
 	</system.webServer>
