added an azure project to storefront in a failed attempt to try and see if anything will work on azure

--- a/apps/Storefront/StorefrontAdminComposite/Web.config
+++ b/apps/Storefront/StorefrontAdminComposite/Web.config
@@ -17,7 +17,7 @@
 		</assemblies>
 	</razor>
 	<connectionStrings>
-		<add name="storefront-db" connectionString="{override me}" />
+		<add name="storefront-db" connectionString="Server=tcp:sa9ipor2qq.database.windows.net;Database=ForumDb;User ID=forum@sa9ipor2qq;Password=NewCo1234;Trusted_Connection=False;Encrypt=True;" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="1.0.0.0" />
